# fitness-data-exporter

./: .env  .gitignore  Cargo.toml  README.MD
grafana/: Dockerfile
grafana/dashboards/: fitness.json
migrations/2022-04-07-014632_create_daily_activity/: down.sql  up.sql
postgres/: Dockerfile
prometheus/: Dockerfile  prometheus.yml
src/: lib.rs  main.rs  models.rs  read_csv.rs  schema.rs
src/csv/: mod.rs
src/database/: mod.rs  models.rs
